updated hover for contact tab, fixed spacing for the side section, updated resume

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ ul {
    justify-content: space-evenly;
    margin: auto;
    padding: auto;
-   font-size: 24px;
+   font-size: 20px;
 }
 a:link {
    color: white;
@@ -69,11 +69,5 @@ p {
    color: royalblue;
 }
 #contactUl li a:hover {
-   color: white;
+   color: royalblue;
 }
-/* #aboutCard {
-   display: none;
-}
-#contactCard {
-   display: none;
-} */
